syntax = "proto3";

package climate;

// Server-Streaming Service
// Will emit a stream of weather conditions every hour to dynamically adjust the internal office climate.

service ClimateService{
    rpc InitiateClimateReadings(ClimateRequest) returns (stream ClimateResponse);
}

// Service makes a request at 6am each morning.
message ClimateRequest{
    string message = 1;
}

// Service receives a continuous stream of local temperature and humidity readings. 
message ClimateResponse{
    string time = 1;
    uint32 temperature = 2;
    uint32 humidity = 3;
}

