syntax = "proto3";

package discovery;

// Control Service
// Will inject and initiate other services within the system.

service DiscoveryService{
    rpc LoadService(ServiceRequest) returns (ServiceResponse);
}

message ServiceRequest{
    string serviceName = 1;
}

message ServiceResponse{
    string address = 1;
}