syntax = "proto3";

package security;

// Bidirectional Service
// Will ask users security questions and accept responses to be checked.

service SecurityService{
    rpc AskSecurityQuestion(stream SecurityRequest) returns (stream SecurityResponse);
}

message SecurityRequest{
    int32 id = 1;
    string question = 2;
}

message SecurityResponse{
    int32 id = 1;
    string answer = 2;
}